src/test/deca/context/valid/Class23.deca
// Description:
//    Definition de class + plusieurs manipulations avec class
// Resultats:
//    OK
// 
// Historique:
//    cree le 01/01/2022

class A{
    boolean b;
}
class B{
    int a;
}
class C{
    float a;
}

{
    A FIRST=new A();
    B SECOND=new B();
    C THIRD=new C();
    FIRST.b=((float)(SECOND.a)==THIRD.a);
}