src/test/deca/context/invalid/class13.deca
class A{
    int a;
   
}


{
    int FIRST=new A();
}